# Agent-Credit-Scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat  test_api.py  test_scraper_core.py
tests/: api_https___www_baidu_com.json  api_https___www_example_com.json  api_https___www_wikipedia_org.json  https___www_baidu_com.json  https___www_example_com.json  https___www_wikipedia_org.json
